# SINN_trawl_processes

./: .gitignore  Computation_cumulant_Levy_basis_kernel.ipynb  Double_well_SINN.ipynb  FPU_SINN.ipynb  FPU_chain_SINN.ipynb  OU_SINN.ipynb  Ornstein–Uhlenbeck_process_with_char_loss.ipynb  Ornstein–Uhlenbeck_process_with_new_loss(version1).ipynb  Ornstein–Uhlenbeck_process_with_new_loss(version2).ipynb  Ornstein–Uhlenbeck_process_with_normal_distribution.ipynb  Poisson_SINN.ipynb  README.md  pyproject.toml  trawl_process_modeling.ipynb
.github/workflows/: ci.yml  docs.yml  lint.yml
ambitsinn/: __init__.py
ambitsinn/plots/: __init__.py  plot_samples.py  plot_stats.py  plot_training_hist.py
ambitsinn/processes/: __init__.py  ou_process.py
ambitsinn/processes/base/: __init__.py  stationary_process_fdd.py  stationary_stochastic_process.py
ambitsinn/processes/noise/: __init__.py  noise.py  noise_basic.py
ambitsinn/processes/trawl/: __init__.py  gamma_trawl_process.py  gaussian_trawl_process.py  trawl_process.py  trawl_process_fdd.py
ambitsinn/sinn/: __init__.py  sinn.py
ambitsinn/sinn/helpers/: __init__.py  acf.py  charfunc.py  density.py  normalization.py  statistics.py
ambitsinn/sinn/losses/: __init__.py  base_loss.py  loss_acf.py  loss_charfunc_base.py  loss_charfunc_schemes.py  loss_density.py
ambitsinn/utils/: __init__.py  functional_types.py
examples/: Losses.ipynb  Noise.ipynb  TrawlProcesses.ipynb  losses.ipynb  noise.ipynb  ou_process_as_trawl.ipynb  tests.py  trawl_processes.ipynb
src/: README.md
src/sinn/: char_loss.py  config.py
src/trawl/: ini_sinn_data.py
toolbox/: __init__.py  _generator.py  _hall_of_fame.py  _loss.py
trawl_sinn/: __init__.py
trawl_sinn/processes/: __init__.py  base.py  gamma_trawl.py  gaussian_trawl.py  noise.py  ou_process.py  trawl.py
trawl_sinn/sinn/: __init__.py  base_loss.py  loss_acf.py  loss_charfunc.py  loss_density.py  sinn.py
